vlib/v/checker/tests/inout/non_exhaustive_match.vv
enum Color {
	red
	green
	blue
}

fn non_exhaustive_match() {
	match Color.red {
		.blue, .green {
			println('My favorite color !')
		}
	}
}
